5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1747_3092.log
== TEST (2019-05-16 11:35:45) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r!=x):
	r=input("v ou D ou E: ").upper()
	if(r==V):
		v=v+3
	elif(r==D):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r!=x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:23) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r==V and r==D and r==E):
	r=input("v ou D ou E: ").upper()
	if(r==V):
		v=v+3
	elif(r==D):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r==V and r==D and r==E):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:38:03) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r==V and r==D and r==E):
	r=input("V ou D ou E: ").upper()
	if(r==V):
		v=v+3
	elif(r==D):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r==V and r==D and r==E):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:19) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r==v and r==d and r==e):
	r=input("V ou D ou E: ").upper()
	if(r==v)
		v=v+3
	elif(r==d):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
File "XXXX", line 8
    if(r==v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:36) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r==v and r==d and r==e):
	r=input("V ou D ou E: ").upper()
	if(r==v):
		v=v+3
	elif(r==d):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
File "XXXX", line 8
    if(r==v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:55) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r==v and r==d and r==e):
	r=input("V ou D ou E: ").upper()
	if(r==v):
		v=v+3
	elif(r==d):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
File "XXXX", line 8
    if(r==v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:19) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r==v or r==d or r==e):
	r=input("V ou D ou E: ").upper()
	if(r==v):
		v=v+3
	elif(r==d):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
File "XXXX", line 8
    if(r==v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:38) 
-- CODE:
r=input("V ou D ou E: ").upper()
v=0
e=0
d=0
soma=0
while(r==v or r==d or r==e):
	r=input("V ou D ou E: ").upper()
	if(r==v):
		v=v+3
	elif(r==d):
		d=d+1
	else:
		e=e+2
		soma=v+d+e
		print(round(soma,2))
		
		
		
	
-- ERROR:
File "XXXX", line 8
    if(r==v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:47) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
	else(r=="D"):
		pontos=pontos+1
print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r=="D"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:56) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
	else(r=="D"):
		pontos=pontos+1
	print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r=="D"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:52:40) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
	else(r=="C"):
		pontos=pontos+1
	print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r=="C"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:15) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
		else(r=="C"):
		pontos=pontos+1
	print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r=="C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:39) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
	else(r=="C"):
		pontos=pontos+1
	print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r=="C"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:58) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
	else(r=="C"):
		pontos=pontos+1
print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r=="C"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:16) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
	else(r=="C"):
		pontos=pontos+1
		
	print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r=="C"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:34) 
-- CODE:
r=input("resultado: ").upper()
pontos=0
soma=0
while(r=="A" and r=="B" and r=="C"):
	r=input("resultado: ").upper()
	if(r=="A"):
		pontos=pontos+3
	elif(r=="B"):
		pontos=pontos+2
	else(r==C):
		pontos=pontos+1
		
	print(pontos)

	
		
		
		
	
-- ERROR:
File "XXXX", line 10
    else(r==C):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
